# zuul-config-generator

./: .gitignore  LICENSE  README.md  generate_fedora_distgits_yaml.py  generate_new_zuul_config.py  pyproject.toml  requirements.txt
