[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "zuul-config-generator"
version = "0.1.0"
license = {text = "MIT"}
dependencies = [
    "aiohttp",
    "PyYAML",
]
readme = "README.md"

[project.scripts]
generate-zuul-config = "generate_new_zuul_config:run"
