[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "zuul-config-generator"
version = "0.1.0"
license = {text = "MIT"}
dependencies = [
    "aiohttp",
    "PyYAML",
]
readme = "README.md"

[project.scripts]
generate-fedora-distgits-yaml = "generate_fedora_distgits_yaml:run"
